--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
         <developer>
             <id>Tux</id>
             <name>Riccardo Fazzi</name>
-            <email>riccardo.fazzi@gmail.com</email>
+            <email>riccardofazzi3@gmail.com</email>
         </developer>
     </developers>
 
